# Prelude

./: .gitignore  CMakeLists.txt  Cargo.toml  index.html  package-lock.json  package.json
.github/workflows/: build.yml
backup/: package.json
backup/misc/: prelude.desktop
backup/misc/browser-extension/: .web-extension-id  extension.js  manifest.json
backup/src-tauri/: Cargo.toml  tauri.conf.json
misc/browser-extension/: extension.js
src/: App.vue  CMakeLists.txt  addtracktompd.cpp  addtracktompd.h  album.cpp  album.h  album_model.cpp  album_model.h  main.cpp  main.js  main.rs  main.ts  mainwindow.cpp  mainwindow.h  mpd.rs  resource.qrc  router.js  router.ts  search_engine.cpp  search_engine.h  tidal.rs  tidal_core.cpp  tidal_core.h
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/src/: cmd.rs  config.rs  main.rs  mpd.rs  qobuz.rs  server.rs  spotify.rs  tidal.rs
src/components/: AlbumCard.vue
src/components/songlist/: SongList.vue  interface.ts
src/mpd/: mpd_client.cpp  mpd_client.h
src/qml/: AlbumDelegate.qml  DetailPage.qml  Header.qml  IconButton.qml  PTabBar.qml  SearchPage.qml  main.qml
src/qobuz/: qobuz_core.cpp  qobuz_core.h
src/spotify/: spotify_core.cpp  spotify_core.h
src/tidal/: tidal_core.cpp  tidal_core.h
src/views/: AlbumDetailView.vue  FindSameView.vue  SearchView.vue  SettingView.vue
tmp/: rustfmt.toml
tmp/src/: main.rs  qobuz.rs
