[package]
name = "prelude"
version = "0.2.1"
authors = ["THMonster <lltiueob@live.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.3", features = ["mime"] }
serde_json = "*"
serde = { version = "1", features = ["derive"] }
bytes = "*"
clap = "2"
md5 = "0.7"
anyhow = "1"
chrono = "*"
regex = "*"
toml = "*"
futures = "0.3"
base64 = "0.13"
directories = "4.0"
async-stream = "0.3"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.14", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }

[profile.release]
panic = 'abort'
opt-level = 'z'
lto = true
