[package]
name = "app"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
anyhow = "1"
indexmap = "1"
axum = { version = "0.3", features = ["mime"] }
bytes = "*"
clap = "2"
md5 = "0.7"
chrono = "*"
regex = "*"
toml = "*"
futures = "0.3"
base64 = "0.13"
directories = "4.0"
async-stream = "0.3"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.14", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
librespot = { git = "https://github.com/THMonster/librespot", branch = "tmp" , default-features = false }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
